# 3d-photo-inpainting

./: .gitignore  argument.yml  argument_rl.yml  argument_trbl.yml  boostmonodepth_utils.py  download.py  download.sh  environment_3d.yml  invert_utils.py  main.py  mesh.py  run_in_env.sh  show_backend.py  utils.py
env/: environment.yml  pyproject.toml
