[tool.poetry]
name = "3d-photo-inpainting"
version = "0.1.0"
description = ""
authors = ["Sebastian Betzin <sebastian@betzin.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
scipy = "^1.7.3"
pyyaml = "^5.4.1"
matplotlib = "^3.5.1"
scikit-image = "^0.19.1"
torchvision = "^0.11.1"
opencv-python = "^4.6.0"
vispy = "^0.8.0"
moviepy = "^1.0.3"
transforms3d = "^0.3.1"
networkx = "^2.6.3"
piexif = "^1.1.3"
azure-storage-queue = "^12.1.6"
azure-storage-blob = "^12.9.0"
applicationinsights = "^0.11.10"
numpy = "==1.22.2"

[tool.poetry.dev-dependencies]